--- a/foundry.toml
+++ b/foundry.toml
@@ -1,12 +1,14 @@
 [profile.default]
-src = "src"
-out = "out"
 libs = ["lib"]
+out = "out"
+src = "src"
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+remappings = []
 
 [rpc_endpoints]
 goerli = "${GOERLI_RPC_URL}"
 
 [etherscan]
-goerli = { key = "${ETHERSCAN_API_KEY}" }
+goerli = {key = "${ETHERSCAN_API_KEY}"}
